infrastructure/isolation/policies.yaml
# Retain these guards on uninstall. Removing SSO must not reopen direct Hubble.
# Cilium Gateway backend connections carry the reserved "ingress" identity.
# Only Heimdall pod connections may reach the Hubble and Longhorn GUIs.
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: authn-hubble
  namespace: kube-system
  annotations: {kustomize.toolkit.fluxcd.io/prune: disabled}
spec:
  endpointSelector:
    matchLabels: {k8s:k8s-app: hubble-ui}
  ingress:
    - fromEndpoints:
      - matchLabels:
          k8s:io.kubernetes.pod.namespace: authn-admin
          k8s:app.kubernetes.io/name: heimdall
      toPorts:
        - ports: [{port: "8081", protocol: TCP}]
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: authn-longhorn
  namespace: longhorn-system
  annotations: {kustomize.toolkit.fluxcd.io/prune: disabled}
spec:
  endpointSelector:
    matchLabels: {k8s:app: longhorn-ui}
  ingress:
    - fromEndpoints:
      - matchLabels:
          k8s:io.kubernetes.pod.namespace: authn-admin
          k8s:app.kubernetes.io/name: heimdall
      toPorts:
        - ports: [{port: "8000", protocol: TCP}]
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: authn-heimdall
  namespace: authn-admin
  annotations: {kustomize.toolkit.fluxcd.io/prune: disabled}
spec:
  endpointSelector:
    matchLabels: {k8s:app.kubernetes.io/name: heimdall}
  ingress:
    - fromEntities: [ingress]
      toPorts:
        - ports: [{port: "4456", protocol: TCP}]
    - fromEndpoints:
      - matchLabels:
          k8s:io.kubernetes.pod.namespace: authn-admin
          k8s:app.kubernetes.io/name: heimdall
      toPorts:
        - ports: [{port: "4457", protocol: TCP}]
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: authn-oauth2-proxy
  namespace: authn-admin
  annotations: {kustomize.toolkit.fluxcd.io/prune: disabled}
spec:
  endpointSelector:
    matchLabels: {k8s:app.kubernetes.io/name: oauth2-proxy}
  ingress:
    - fromEndpoints:
      - matchLabels:
          k8s:io.kubernetes.pod.namespace: authn-admin
          k8s:app.kubernetes.io/name: heimdall
      toPorts:
        - ports: [{port: "4180", protocol: TCP}]
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: authn-openfga
  namespace: authn-admin
  annotations: {kustomize.toolkit.fluxcd.io/prune: disabled}
spec:
  endpointSelector:
    matchLabels: {k8s:app.kubernetes.io/name: openfga}
  ingress:
    - fromEndpoints:
      - matchLabels:
          k8s:io.kubernetes.pod.namespace: authn-admin
          k8s:app.kubernetes.io/name: heimdall
      toPorts:
        - ports: [{port: "8080", protocol: TCP}]
